Setup basic styles directory structure

--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -1,1 +1,13 @@
-@import 'base/variables.sass'
+// Ambience
+@import "ambience/spaces";
+@import "ambience/fonts";
+@import "ambience/typography";
+@import "ambience/colors";
+
+// Base
+@import "base/reset";
+@import "base/responsive";
+@import "base/reusables";
+
+// Components
+@import 'components/section-pricing'
