--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -3,3 +3,5 @@ html
     link href="./css/style.css" rel="stylesheet" type='text/css'
   body
     h1 hello world
+    .section-pricing
+      h1 Pricing
