Create basic markup structure

--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -1,7 +1,85 @@
 html
+
   head
+    meta charset="utf-8"
+    meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
+    title Remoto
+    meta name="description" content=""
+    meta name="author" content=""
+    meta name="keywords" content=""
+    meta name="viewport" content="width=device-width, initial-scale=1.0"
     link href="./css/style.css" rel="stylesheet" type='text/css'
+
   body
-    h1 hello world
-    .section-pricing
-      h1 Pricing
+
+    nav.navigation-component
+      a Remoto
+      a Product
+      a Pricing
+      a.button Get Started
+
+    section.section-hero
+      h1 Keep your team close and your clients closer
+      h4 Remoto is an enjoyable and productive solution for sales and support teams to communicate with customers.
+      a.button Get Started
+
+    section.section-features
+      .feature
+        h2 Your team on the same page
+        p Great customer communication relies on internal coordination. With Remoto, your team share a common view of all customer interactions and stay always in sync.
+      .feature
+        h2 Freedom from the desk phone  
+        p Remoto lets you make and receive calls with your business numbers, from your laptop or mobile. Easily transfer calls and create conferences, no pins or numbers to memorize. 
+      .feature
+        h2 Transform your business in 7 min.
+        p Choose toll-free or local numbers from over 40 countries, invite your team members and get going in under 7 minutes. No need for the IT guy or hardware investments
+    
+    section.section-pricing
+      h1 Plans that suit your needs
+      .plan
+        h2 Free
+        h3 $0
+        a.button Start Free
+        ul
+          li Free Intra-company calls worldwide
+          li Unlimited groups
+          li 10k message storage
+      .plan
+        h2 Standard
+        h3 $20
+        span per active user, per month
+        a.button Buy Standard
+        ul
+          li All features from the Free plan
+          li Toll free number
+          li 1 year message storage
+          li Unlimited inbound calls*
+          li Outbound calls**
+      .plan
+        h2 Enterprise
+        h3 $50
+        span per active user, per month
+        a.button Buy Enterprise
+        ul
+          li All features from the Standard plan
+          li Call Queues
+          li Unlimited message storage
+          li Compliance Exports for all messages
+          li Advanced IVR
+      .footnote
+        span * toll free excluded
+        span ** price per minute
+    
+    section.section-letter
+      .letter
+        h1 A Letter from Fred
+        p Save yourself.  Save the world.
+        p Life is short and the world is warming. What can you do about it? I bet you already are:  Remoto Remote working.
+        p The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere and everybody became a remote worker whether they realize it or not.  Working remotely allows us to be there for the ones we love. It allow us to see the world, without ever having to commute. 
+        p Still, it is hard to keep everybody in sync when people don't bump into each other in the water-cooler. Guess what… even for people that meet in the office, effective communication doesn't just happen.
+        p How to keep a coherent customer communication when it happens by email, phone or messaging apps, and involve several people in your organization? 
+        p This is a problem I had myself in my previous companies and so did several professionals we interviewed. Remoto goal is to allow you to communicate better with you customers and your team, and convince your company that people don't need to be in the same room to be on the same page.
+        p Remoto is more than work tool, it is a new way to think about work. Think outside the cubicle, be Remoto.
+        p Yours,
+        p.signature Fred Guth, Founder & CEO
+        p P.S.  If you want to talk, just reach me at <a>http://remoto.me/fred@remoto.</a>
