--- a/src/style/ambience/_colors.sass
+++ b/src/style/ambience/_colors.sass
@@ -1,4 +1,4 @@
-$pearl: #dca
-$saphire: #07c
-$darksaphire: #347
-$topaz: #f75
+$color-pearl: #dca
+$color-saphire: #07c
+$color-darksaphire: #347
+$color-topaz: #f75
