--- a/src/style/components/_section-pricing.sass
+++ b/src/style/components/_section-pricing.sass
@@ -1,2 +1,4 @@
 .section-pricing
-  background-color: $darksaphire
+  color: #fff
+  background-color: $color-darksaphire;
+  background-image: linear-gradient(#627aaf, $color-darksaphire);
