--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -8,15 +8,16 @@ html
     meta name="author" content=""
     meta name="keywords" content=""
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    link href="./css/style.css" rel="stylesheet" type='text/css'
+    link rel="icon" type="image/png" href="./images/favicon.png"
+    link href="./style/style.css" rel="stylesheet" type='text/css'
 
   body
 
-    nav.navigation-component
+    nav.navigation-menu
       a Remoto
       a Product
       a Pricing
-      a.button Get Started
+      a.button.-small.-small Get Started
 
     section.section-hero
       h1 Keep your team close and your clients closer
@@ -39,7 +40,7 @@ html
       .plan
         h2 Free
         h3 $0
-        a.button Start Free
+        a.button.-small Start Free
         ul
           li Free Intra-company calls worldwide
           li Unlimited groups
@@ -48,7 +49,7 @@ html
         h2 Standard
         h3 $20
         span per active user, per month
-        a.button Buy Standard
+        a.button.-small Buy Standard
         ul
           li All features from the Free plan
           li Toll free number
@@ -59,7 +60,7 @@ html
         h2 Enterprise
         h3 $50
         span per active user, per month
-        a.button Buy Enterprise
+        a.button.-small Buy Enterprise
         ul
           li All features from the Standard plan
           li Call Queues
@@ -67,8 +68,8 @@ html
           li Compliance Exports for all messages
           li Advanced IVR
       .footnote
-        span * toll free excluded
-        span ** price per minute
+        span toll free excluded
+        span price per minute
     
     section.section-letter
       .letter
