Basic paragraph typography setup

--- a/src/style/ambience/_typography.sass
+++ b/src/style/ambience/_typography.sass
@@ -1,3 +1,18 @@
 $font-family-body: 'Roboto', Helvetica, sans-serif
 $font-family-headings: 'Montserrat', 'Gotham', Helvetica, sans-serif
 $font-family-tag: 'Roboto', Helvetica, sans-serif
+
+$font-size-mega: 72px;
+$font-size-kilo: 48px;
+$font-size-hecto: 36px;
+$font-size-deca: 24px;
+$font-size-base: 20px;
+$font-size-deci: 18px;
+$font-size-centi: 16px
+
+$line-height-kilo: 72px;
+$line-height-hecto: 64px;
+$line-height-deca: 56px;
+$line-height-base: 32px;
+$line-height-deci: 1rem;
+$line-height-centi: 24px;
