--- a/src/style/components/_section-pricing.sass
+++ b/src/style/components/_section-pricing.sass
@@ -1,4 +1,5 @@
 .section-pricing
+  padding-bottom: 0
   color: #fff
   background-color: $color-darksaphire;
   background-image: linear-gradient(#627aaf, $color-darksaphire);
