--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -6,9 +6,13 @@
 
 // Base
 @import "base/reset";
+
 @import "base/responsive";
 @import "base/reusables";
+
 @import "base/unclassed";
+@import "base/typography";
+@import "base/structure";
 
 // Components
 @import 'components/navigation-menu'
