--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -72,6 +72,7 @@ html
         span price per minute
     
     section.section-letter
+      .envelope
       .letter
         h1 A Letter from Fred
         p Save yourself.  Save the world.
@@ -84,3 +85,4 @@ html
         p Yours,
         p.signature Fred Guth, Founder & CEO
         p P.S.  If you want to talk, just reach me at <a>http://remoto.me/fred@remoto.</a>
+      .button Get Started
