--- a/src/style/components/_section-letter.sass
+++ b/src/style/components/_section-letter.sass
@@ -2,20 +2,55 @@
   background-color: $color-darksaphire
   position: relative
   overflow: hidden
-
-  &:after,
-  &:before
-   content: ''
-   display: block
-   width: calc(#{$space-xxl} + 60vw)
-   height: 100vh
-   position: fixed
-   bottom: 0
-   left: 50%
-   transform: translateX(-50%)
-   background-size: 100% auto
+  z-index: 1
+  padding-top: $space-xxl + $space-xxl
 
   &:after
-    background-image: url("../images/letter-front.png")
-  &:before
-    background-image: url("../images/letter-back.png")
+    content: ''
+    position: absolute
+    top: 0
+    right: 0
+    left: 0
+    height: $space-xxl + $space-xxl
+    background-image: linear-gradient($color-darksaphire, transparent);
+
+  .letter
+    margin: 0 auto
+    width: calc(#{$space-xl} + 60%)
+    background-color: #fff
+    padding: 6vw
+    padding-bottom: $space-xxl
+    box-shadow: 0 4px 16px rgba(#000, 0.2)
+
+    +medium-up
+      max-width: 960px
+
+  .envelope
+    &:after,
+    &:before
+      content: ''
+      display: block
+      width: calc(#{$space-xl} + 56vw)
+      max-width: 100%
+      height: 100vh
+      position: fixed
+      left: 50%
+      bottom: calc(-4vw - #{$space-m})
+      transform: translateX(-50%)
+      background-size: 100% auto
+      background-position: center bottom
+      background-repeat: no-repeat
+      pointer-events: none
+    
+      +medium-up
+        max-width: 1024px
+        // bottom: calc(-#{$space-l})
+
+      +huge-up
+        bottom: calc(-#{$space-m})
+
+    &:after
+      background-image: url("../images/letter-front.png")
+    &:before
+      background-image: url("../images/letter-back.png")
+      z-index: -1
