--- a/style/style.css
+++ b/style/style.css
@@ -73,6 +73,29 @@ section {
   padding-right: calc(1rem + 10vw);
 }
 
+p {
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 1.5rem;
+}
+
+@media (min-width: 642px) {
+  p {
+    font-size: 20px;
+    line-height: 32px;
+    margin-bottom: 2rem;
+  }
+}
+
+h1, h2, h3, h4 {
+  font-family: "Montserrat", "Gotham", Helvetica, sans-serif;
+}
+
+body > section {
+  position: relative;
+  z-index: 2;
+}
+
 .navigation-menu {
   background-color: #07c;
   color: #fff;
@@ -87,12 +110,17 @@ section {
   background-color: #07c;
 }
 
+.section-features {
+  background-color: #fff;
+}
+
 .section-features .feature {
   padding-top: 8rem;
   padding-bottom: 8rem;
 }
 
 .section-pricing {
+  padding-bottom: 0;
   color: #fff;
   background-color: #347;
   background-image: linear-gradient(#627aaf, #347);
@@ -102,26 +130,70 @@ section {
   background-color: #347;
   position: relative;
   overflow: hidden;
-}
-
-.section-letter:after, .section-letter:before {
-  content: '';
-  display: block;
-  width: calc(16rem + 60vw);
-  height: 100vh;
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  background-size: 100% auto;
+  z-index: 1;
+  padding-top: 32rem;
 }
 
 .section-letter:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 32rem;
+  background-image: linear-gradient(#347, transparent);
+}
+
+.section-letter .letter {
+  margin: 0 auto;
+  width: calc(8rem + 60%);
+  background-color: #fff;
+  padding: 6vw;
+  padding-bottom: 16rem;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+}
+
+@media (min-width: 642px) {
+  .section-letter .letter {
+    max-width: 960px;
+  }
+}
+
+.section-letter .envelope:after, .section-letter .envelope:before {
+  content: '';
+  display: block;
+  width: calc(8rem + 56vw);
+  max-width: 100%;
+  height: 100vh;
+  position: fixed;
+  left: 50%;
+  bottom: calc(-4vw - 2rem);
+  transform: translateX(-50%);
+  background-size: 100% auto;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  pointer-events: none;
+}
+
+@media (min-width: 642px) {
+  .section-letter .envelope:after, .section-letter .envelope:before {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1441px) {
+  .section-letter .envelope:after, .section-letter .envelope:before {
+    bottom: calc(-2rem);
+  }
+}
+
+.section-letter .envelope:after {
   background-image: url("../images/letter-front.png");
 }
 
-.section-letter:before {
+.section-letter .envelope:before {
   background-image: url("../images/letter-back.png");
+  z-index: -1;
 }
 
 .button {
