--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -17,12 +17,12 @@ html
       a Remoto
       a Product
       a Pricing
-      a.button.-small.-small Get Started
+      a.button.-small.-small Start Free
 
     section.section-hero
       h1 Keep your team close and your clients closer
       h4 Remoto is an enjoyable and productive solution for sales and support teams to communicate with customers.
-      a.button Get Started
+      a.button Start Free
 
     section.section-features
       .feature
@@ -85,4 +85,4 @@ html
         p Yours,
         p.signature Fred Guth, Founder & CEO
         p P.S.  If you want to talk, just reach me at <a>http://remoto.me/fred@remoto.</a>
-      .button Get Started
+      .button Start Free
