--- a/style/style.css
+++ b/style/style.css
@@ -142,20 +142,32 @@ body > section {
   left: 0;
   height: 32rem;
   background-image: linear-gradient(#347, transparent);
+  pointer-events: none;
+  z-index: 3;
+}
+
+.section-letter .button {
+  position: fixed;
+  z-index: 2;
+  bottom: calc(1.5rem + 2vw);
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .section-letter .letter {
   margin: 0 auto;
   width: calc(8rem + 60%);
+  padding-bottom: 4rem;
+  border-radius: 2px;
   background-color: #fff;
   padding: 6vw;
-  padding-bottom: 16rem;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
 }
 
 @media (min-width: 642px) {
   .section-letter .letter {
     max-width: 960px;
+    padding-bottom: 8rem;
   }
 }
 
@@ -197,7 +209,6 @@ body > section {
 }
 
 .button {
-  border-radius: 4px;
   padding-top: 1rem;
   padding-bottom: 1rem;
   padding-right: 2rem;
@@ -205,7 +216,9 @@ body > section {
   display: inline-block;
   color: #fff;
   background-color: #f75;
-  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: all 0.2s ease;
 }
 
 .button.-small {
@@ -213,4 +226,13 @@ body > section {
   padding-bottom: 0.5rem;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
+}
+
+.button:hover, .button:focus {
+  background-color: #f27151;
+}
+
+.button:active {
+  background-color: #e66b4d;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
 }
