Implement section-pricing layout

--- a/src/style/ambience/_typography.sass
+++ b/src/style/ambience/_typography.sass
@@ -9,10 +9,13 @@ $font-size-deca: 24px;
 $font-size-base: 20px;
 $font-size-deci: 18px;
 $font-size-centi: 16px
+$font-size-mili: 14px
 
-$line-height-kilo: 72px;
-$line-height-hecto: 64px;
-$line-height-deca: 56px;
+$line-height-mega: 72px;
+$line-height-kilo: 64px;
+$line-height-hecto: 56px;
+$line-height-deca: 48px;
 $line-height-base: 32px;
-$line-height-deci: 1rem;
-$line-height-centi: 24px;
+$line-height-deci: 24px;
+$line-height-centi: 20px;
+$line-height-mili: 16px;
