--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -10,3 +10,19 @@ p
 
 h1, h2, h3, h4
   font-family: $font-family-headings
+  font-weight: 400
+  margin-bottom: $space-m
+
+h1
+  font-size: $font-size-kilo
+  line-height: $line-height-kilo
+h2
+  font-size: $font-size-hecto
+  line-height: $line-height-hecto
+h3
+  font-size: $font-size-deca
+  line-height: $line-height-deca
+h4
+  font-size: $font-size-base
+  line-height: $line-height-base
+  font-weight: 200
