--- a/src/style/components/_section-pricing.sass
+++ b/src/style/components/_section-pricing.sass
@@ -1,5 +1,60 @@
 .section-pricing
-  padding-bottom: 0
   color: #fff
   background-color: $color-darksaphire;
   background-image: linear-gradient(#627aaf, $color-darksaphire);
+  text-align: center
+
+  > .footnote > p
+    margin-bottom: $space-xs
+    font-size: $font-size-centi
+    line-height: $line-height-mili
+    color: rgba(#fff, 0.4)
+
+  > .plans
+    display: flex
+    justify-content: space-between
+    margin-top: $space-l
+    margin-bottom: $space-m
+
+    +medium-down
+      flex-direction: column
+
+    > .plan
+      width: 30%
+  
+      +medium-down
+        width: calc(#{$space-xl} + 60%)
+        max-width: 100%
+        margin-left: auto
+        margin-right: auto
+        margin-bottom: $space-l
+
+      > .name
+        font-size: $font-size-base
+        line-height: $line-height-base
+        margin-bottom: $space-xs
+
+      > .price
+        font-size: $font-size-mega
+        line-height: $line-height-mega
+        margin-bottom: $space-xxs
+        font-weight: 800
+
+      > .note
+        font-size: $font-size-mili
+        line-height: $line-height-centi
+        margin-bottom: $space-s
+        color: rgba(#fff, 0.8)
+
+      > .button
+        margin-bottom: $space-m
+
+      > .features > li
+        font-size: $font-size-deci
+        line-height: $line-height-deci
+        color: rgba(#fff, 0.8)
+        margin-bottom: $space-xs
+
+        &:first-child
+          font-weight: 700
+          color: #fff
