--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -37,39 +37,43 @@ html
     
     section.section-pricing
       h1 Plans that suit your needs
-      .plan
-        h2 Free
-        h3 $0
-        a.button.-small Start Free
-        ul
-          li Free Intra-company calls worldwide
-          li Unlimited groups
-          li 10k message storage
-      .plan
-        h2 Standard
-        h3 $20
-        span per active user, per month
-        a.button.-small Buy Standard
-        ul
-          li All features from the Free plan
-          li Toll free number
-          li 1 year message storage
-          li Unlimited inbound calls*
-          li Outbound calls**
-      .plan
-        h2 Enterprise
-        h3 $50
-        span per active user, per month
-        a.button.-small Buy Enterprise
-        ul
-          li All features from the Standard plan
-          li Call Queues
-          li Unlimited message storage
-          li Compliance Exports for all messages
-          li Advanced IVR
+      .plans
+        .plan
+          h2.name Free
+          h3.price $0
+          p.note Ta-dah! 🎉
+          a.button.-small Start Free
+          ul.features
+            li Free Intra-company calls worldwide
+            li 10k message storage
+            li Unlimited groups
+        .plan
+          h2.name Standard
+          h3.price $20
+          p.note per active user, per month
+          a.button.-small Buy Standard
+          ul.features
+            li All features from the Free plan
+            li 1 year message storage
+            li Toll free number
+            li Unlimited inbound calls*
+            li Outbound calls**
+        .plan
+          h2.name Enterprise
+          h3.price $50
+          p.note per active user, per month
+          a.button.-small Buy Enterprise
+          ul.features
+            li All features from the Standard plan
+            li Unlimited message storage
+            li Call Queues
+            li Compliance Exports for all messages
+            li Advanced IVR
       .footnote
-        span toll free excluded
-        span price per minute
+        p
+          | * toll free excluded
+        p
+          | ** price per minute
     
     section.section-letter
       .envelope
@@ -84,5 +88,5 @@ html
         p Remoto is more than work tool, it is a new way to think about work. Think outside the cubicle, be Remoto.
         p Yours,
         p.signature Fred Guth, Founder & CEO
-        p P.S.  If you want to talk, just reach me at <a>http://remoto.me/fred@remoto.</a>
+        p P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">alpha.remoto.me/fred@remoto.</a>
       .button Start Free
