--- a/src/style/elements/_button.sass
+++ b/src/style/elements/_button.sass
@@ -15,6 +15,8 @@
     padding-bottom: $space-xxs
     padding-right: $space-s
     padding-left: $space-s
+    font-size: $font-size-centi
+    line-height: $line-height-centi
 
   &:hover,
   &:focus
