--- a/src/style/base/_unclassed.sass
+++ b/src/style/base/_unclassed.sass
@@ -15,8 +15,5 @@ a
   -moz-box-sizing: border-box
   -webkit-box-sizing: border-box
 
-section
-  padding-top: $space-xl
-  padding-bottom: $space-xl
-  padding-left: calc(#{$space-xs} + 10vw)
-  padding-right: calc(#{$space-xs} + 10vw)
+::selection
+  background-color: $color-selection
