--- a/src/style/base/_reusables.sass
+++ b/src/style/base/_reusables.sass
@@ -1,4 +1,30 @@
-@mixin v-align
-  position: absolute
+=container
+  padding-left: calc(#{$space-xs} + 10vw)
+  padding-right: calc(#{$space-xs} + 10vw)
+
+=v-align
+  position: relative
   top: 50%
   transform: translateY(-50%)
+
+=smart-underline($background: #fff, $selection: $color-selection, $position: 90%)
+  color: inherit
+  text-decoration: none
+  background: -webkit-linear-gradient(currentColor, currentColor)
+  background-size: 1px 1px
+  background-repeat: repeat-x
+  text-shadow: 0 0.03em $background, 0 -0.03em $background, 0.06em 0 $background, -0.06em 0 $background, 0.09em 0 $background, -0.09em 0 $background, 0.12em 0 $background, -0.12em 0 $background, 0.15em 0 $background, -0.15em 0 $background
+  background-position-y: $position
+  background-position-x: 0%
+  &::selection 
+    text-shadow: 0.03em 0 $selection, -0.03em 0 $selection, 0 0.03em $selection, 0 -0.03em $selection, 0.06em 0 $selection, -0.06em 0 $selection, 0.09em 0 $selection, -0.09em 0 $selection, 0.12em 0 $selection, -0.12em 0 $selection, 0.15em 0 $selection, -0.15em 0 $selection
+    background: $selection
+  &::-moz-selection 
+    text-shadow: 0.03em 0 $selection, -0.03em 0 $selection, 0 0.03em $selection, 0 -0.03em $selection, 0.06em 0 $selection, -0.06em 0 $selection, 0.09em 0 $selection, -0.09em 0 $selection, 0.12em 0 $selection, -0.12em 0 $selection, 0.15em 0 $selection, -0.15em 0 $selection
+    background: $selection
+  &:before, &:after, *, *:before, *:after 
+    text-shadow: none
+  &:visited
+    color: inherit
+    
+  
