--- a/src/style/elements/_button.sass
+++ b/src/style/elements/_button.sass
@@ -1,14 +1,18 @@
 .button
-  padding-top: $space-xs
-  padding-bottom: $space-xs
-  padding-right: $space-m
-  padding-left: $space-m
   display: inline-block
   color: #fff
   background-color: $color-topaz
   box-shadow: 0 4px 16px rgba(#000, 0.2)
   cursor: pointer
   transition: all 0.2s ease
+  padding-top: $space-xs
+  padding-bottom: $space-xs
+  padding-right: $space-m
+  padding-left: $space-m
+  font-size: $font-size-base
+  line-height: $line-height-deci
+  font-weight: 500
+  letter-spacing: 0.05em
 
   &.-small
     padding-top: $space-xxs
@@ -17,6 +21,14 @@
     padding-left: $space-s
     font-size: $font-size-centi
     line-height: $line-height-centi
+
+  &.-tiny
+    padding-top: $space-xxs
+    padding-bottom: $space-xxs
+    padding-right: $space-xs
+    padding-left: $space-xs
+    font-size: $font-size-mili
+    line-height: $line-height-mili
 
   &:hover,
   &:focus
